--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="html">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="https://64.media.tumblr.com/9e3646736d2ce512c5605f687f91f26d/97d915d5b042e60e-77/s500x750/d0809aa041ca8ef8ac98126f26e89f4a43e05079.gifv">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
